# H6NSDK

./: .gitignore  CMakeLists.txt  COPYRIGHT  README.md
csharp/: .gitignore  CMakeLists.txt
impgen/: capsule.c  capsule.def
include/libh6n/: capsule.h  common.h  interfaces.h  libh6n.h
libh6n/: common.h  interfaces.h
src/: agent.c  agent.def  capsule.c  capsule.def  createinterface.c  interfaces.cpp
swig/: CMakeLists.txt  interfaces.i
swig/csharp/: libh6n-net.csproj
tests/: CMakeLists.txt  agent.cpp
